# tiepie_parser

./: .gitignore  pyproject.toml
tiepie_parser/: __init__.py  loader.py  riff.py  tpo.py
