[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiepie_parser"
authors = [{ name = "Julia Tatz", email = "julia.tatz@childrens.harvard.edu" }]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = ["typing_extensions>=4.14", "numpy>=2.1"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # Pylint
    "PL",
    # pyupgrade
    "UP",
    # Ruff-specific rules
    "RUF",
    # NumPy-specific rules
    "NPY",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-boolean-trap
    "FBT",
    # flake8-return
    "RET",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # too-many-branches
    "PLR0912",
    # too-many-statements
    "PLR0915",
    # magic-value-comparison
    "PLR2004",
    # superfluous-else-raise
    "RET506",
    # non-pep604-annotation-optional
    "UP045",
]
